Fix windows scrollbar issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,6 +2,10 @@
  * Content
  ******************************************************************************/
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   padding-bottom: 70px;
   color: var(--global-text-color);
